Prevent content from bleeding w/hacky fix

--- a/source/css/web.css
+++ b/source/css/web.css
@@ -142,6 +142,14 @@ div.tutorial {
   break-after: column;
 }
 
+.no-bleeding-to-next-page {
+  max-height: calc( var(--column-height) - 1px ) !important;
+  /* on desktop, scrolling vertically with the *mouse* moves the content on the page horizonatlly. 
+     content is still "viewable" by using the up/down arrows" 
+  */
+  overflow-y: scroll;
+}
+
 div.tutorial h2 {
   height: auto;
   flex-grow: 0;
